kubernetes/apps/default/audiobookshelf/deploy.yaml
# kubernetes/apps/audiobookshelf/audiobookshelf-deploy-svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: audiobookshelf
  namespace: default
  labels:
    app: audiobookshelf
spec:
  replicas: 1
  strategy:
    type: Recreate  
  selector:
    matchLabels:
      app: audiobookshelf
  template:
    metadata:
      labels:
        app: audiobookshelf
    spec:
      containers:
        - name: audiobookshelf
          image: ghcr.io/advplyr/audiobookshelf:2.37.1
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
          volumeMounts:
            - name: audiobooks
              mountPath: /audiobooks
            - name: config
              mountPath: /config
            - name: metadata
              mountPath: /metadata
      volumes:
        - name: audiobooks
          persistentVolumeClaim:
            claimName: audiobookshelf-audiobooks-pvc
        - name: config
          persistentVolumeClaim:
            claimName: audiobookshelf-config-pvc-lh
        - name: metadata
          persistentVolumeClaim:
            claimName: audiobookshelf-metadata-pvc-lh
---
