kubernetes/apps/default/audiobookshelf/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: audiobookshelf
  namespace: default
  labels:
    app: audiobookshelf
spec:
  type: LoadBalancer
  loadBalancerIP: 10.0.0.208   # pick a free IP from your MetalLB pool
  selector:
    app: audiobookshelf
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
